@@ -18,14 +18,13 @@ package org.hyperledger.besu.evm.fluent;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.evm.account.Account;
-import org.hyperledger.besu.evm.account.EvmAccount;
+import org.hyperledger.besu.evm.account.MutableAccount;
 import org.hyperledger.besu.evm.worldstate.WorldUpdater;
 
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /** The Simple world. */
 public class SimpleWorld implements WorldUpdater {
@@ -66,21 +65,34 @@ public class SimpleWorld implements WorldUpdater {
   }
 
   @Override
-  public EvmAccount createAccount(final Address address, final long nonce, final Wei balance) {
+  public MutableAccount createAccount(final Address address, final long nonce, final Wei balance) {
+    if (getAccount(address) != null) {
+      throw new IllegalStateException("Cannot create an account when one already exists");
+    }
     SimpleAccount account = new SimpleAccount(address, nonce, balance);
     accounts.put(address, account);
     return account;
   }
 
   @Override
-  public EvmAccount getAccount(final Address address) {
-    if (accounts.containsKey(address)) {
-      return accounts.get(address);
-    } else if (parent != null) {
-      return parent.getAccount(address);
-    } else {
-      return null;
+  public MutableAccount getAccount(final Address address) {
+    SimpleAccount account = accounts.get(address);
+    if (account != null) {
+      return account;
     }
+    Account parentAccount = parent == null ? null : parent.getAccount(address);
+    if (parentAccount != null) {
+      account =
+          new SimpleAccount(
+              parentAccount,
+              parentAccount.getAddress(),
+              parentAccount.getNonce(),
+              parentAccount.getBalance(),
+              parentAccount.getCode());
+      accounts.put(address, account);
+      return account;
+    }
+    return null;
   }
 
   @Override
@@ -98,7 +110,7 @@ public class SimpleWorld implements WorldUpdater {
     return accounts.entrySet().stream()
         .filter(e -> e.getValue() == null)
         .map(Map.Entry::getKey)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -108,11 +120,16 @@ public class SimpleWorld implements WorldUpdater {
 
   @Override
   public void commit() {
-    parent.accounts.putAll(accounts);
+    accounts.forEach(
+        (address, account) -> {
+          if (!account.updateParent()) {
+            parent.accounts.put(address, account);
+          }
+        });
   }
 
   @Override
   public Optional<WorldUpdater> parentUpdater() {
-    return Optional.empty();
+    return Optional.ofNullable(parent);
   }
 }
